--- a/.github/workflows/eks_deploy.yml
+++ b/.github/workflows/eks_deploy.yml
@@ -28,35 +28,33 @@ jobs:
           DOPPLER_TOKEN: ${{ secrets.SERVICE_DOPPLER_TOKEN_DEV }}
       
       # We have one AWS account for github ci, and there is no differentiation based on env type dev or prd
-      # - name: AWS Credentials
-      #   uses: aws-actions/configure-aws-credentials@v1
-      #   with:
-      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     aws-region: ${{ secrets.AWS_REGION }}
-      #     role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+      - name: AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
 
-      # - name: Extract branch short sha
-      #   id: git_extract_branch_sha
-      #   shell: bash
-      #   run: |
-      #     echo "REPO_SHA_SHORT=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-      #     echo "Output for sha_short is: ${{ steps.git_extract_branch_sha.outputs.REPO_SHA_SHORT }}"
+      - name: Extract branch short sha
+        id: git_extract_branch_sha
+        shell: bash
+        run: |
+          echo "REPO_SHA_SHORT=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+          echo "Output for sha_short is: ${{ steps.git_extract_branch_sha.outputs.REPO_SHA_SHORT }}"
 
-      # - name: kubeconfing
-      #   id: kubeconfig
-      #   run: |
-      #     aws eks update-kubeconfig --name ${{ secrets.AWS_EKS_CLUSTER_NAME }} --region ${{ secrets.AWS_REGION }}
-      #     echo "KUBE_CONFIG_DATA=$(cat ~/.kube/config | base64)" >> $GITHUB_OUTPUT
-          
-      #     # TODO: We need to check if we can use RBAC to allow access this
-            # need an if here
-      #     # echo "KUBE_HOSTNAME=$(kubectl get svc ingress-nginx-controller -n ingress-nginx -o json | jq -r '.status.loadBalancer.ingress[0].hostname')" >> $GITHUB_OUTPUT
+      - name: kubeconfing
+        id: kubeconfig
+        run: |
+          aws eks update-kubeconfig --name ${{ secrets.AWS_EKS_CLUSTER_NAME }} --region ${{ secrets.AWS_REGION }}
+          echo "KUBE_CONFIG_DATA=$(cat ~/.kube/config | base64)" >> $GITHUB_OUTPUT
+          if ${{ env.HELM_CONFIG_SERVICE_SUBDOMAIN != '' }} ; then
+            echo "KUBE_HOSTNAME=$(kubectl get svc ingress-nginx-controller -n ingress-nginx -o json | jq -r '.status.loadBalancer.ingress[0].hostname')" >> $GITHUB_OUTPUT
+          fi
 
       # - name: Create subdomain if service has that settings under Doppler
       #   id: create_subdomain
-      #   if: ${{ success() && secrets.SERVICE_SUBDOMAIN != '' }}
+      #   if: ${{ success() && env.HELM_CONFIG_SERVICE_SUBDOMAIN != '' }}
       #   run: |
       #     echo "Creating subdomain ${{ env.HELM_CONFIG_SERVICE_SUBDOMAIN }} for service ${{ secrets.SERVICE_NAME }} under Cloudflare "
       #     output=$(python cf-utils.py)
@@ -69,11 +67,23 @@ jobs:
       #     SUBDOMAIN: ${{ env.HELM_CONFIG_SERVICE_SUBDOMAIN }}
       #     IP: ${{ steps.kubeconfig.outputs.KUBE_HOSTNAME }}
 
-      # - name: Deploy ${{ secrets.SERVICE_NAME }} to kubernetes namespace ${{ secrets.AWS_EKS_NAMESPACE }}
-      #   id: eksdeploy
-      #   if: ${{ success() && secrets.AWS_EKS_NAMESPACE != '' &&  secrets.SERVICE_NAME != '' }}
-      #   uses: koslib/helm-eks-action@v1.26.0
-      #   env:
-      #     KUBE_CONFIG_DATA: ${{ steps.kubeconfig.outputs.KUBE_CONFIG_DATA }}
-      #   with:
-      #     command: helm upgrade ${{ secrets.SERVICE_NAME }} ./helm --install --wait --atomic --namespace=${{ env.HELM_CONFIG_EKS_NAMESPACE }} --create-namespace --set "autoscaling.maxReplicas=${{ env.HELM_CONFIG_SERVICE_MAX_REPLICA || 1 }},imageCredentials.username=${{ secrets.DOCKERHUB_USERNAME }},imageCredentials.password=${{ secrets.DOCKERHUB_TOKEN }},dopplerToken=${{ secrets.SERVICE_DOPPLER_TOKEN_PRD }}" --set "image.repository=${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.SERVICE_NAME }}" --set "image.tag=${{ ${{ steps.git_extract_branch_sha.outputs.REPO_SHA_SHORT }} }}"
+
+      # Deploying into k8s
+
+      - name: ENV = DEV | Deploy ${{ secrets.SERVICE_NAME }} to kubernetes namespace ${{ secrets.AWS_EKS_NAMESPACE }}
+        id: eksdeploy
+        if: ${{ success() && secrets.AWS_EKS_NAMESPACE != '' &&  secrets.SERVICE_NAME != '' }}
+        uses: koslib/helm-eks-action@v1.26.0
+        env:
+          KUBE_CONFIG_DATA: ${{ steps.kubeconfig.outputs.KUBE_CONFIG_DATA }}
+        with:
+          command: helm upgrade ${{ secrets.SERVICE_NAME }} ./helm --install --wait --atomic --namespace=${{ env.HELM_CONFIG_EKS_NAMESPACE }} --create-namespace --set "autoscaling.maxReplicas=${{ env.HELM_CONFIG_SERVICE_MAX_REPLICA || 1 }},imageCredentials.username=${{ secrets.DOCKERHUB_USERNAME }},imageCredentials.password=${{ secrets.DOCKERHUB_TOKEN }},dopplerToken=${{ secrets.SERVICE_DOPPLER_TOKEN_DEV }}" --set "image.repository=${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.SERVICE_NAME }}" --set "image.tag=${{ ${{ steps.git_extract_branch_sha.outputs.REPO_SHA_SHORT }} }}"
+
+      - name: ENV = PRD | Deploy ${{ secrets.SERVICE_NAME }} to kubernetes namespace ${{ secrets.AWS_EKS_NAMESPACE }}
+        id: eksdeploy
+        if: ${{ success() && secrets.AWS_EKS_NAMESPACE != '' &&  secrets.SERVICE_NAME != '' }}
+        uses: koslib/helm-eks-action@v1.26.0
+        env:
+          KUBE_CONFIG_DATA: ${{ steps.kubeconfig.outputs.KUBE_CONFIG_DATA }}
+        with:
+          command: helm upgrade ${{ secrets.SERVICE_NAME }} ./helm --install --wait --atomic --namespace=${{ env.HELM_CONFIG_EKS_NAMESPACE }} --create-namespace --set "autoscaling.maxReplicas=${{ env.HELM_CONFIG_SERVICE_MAX_REPLICA || 1 }},imageCredentials.username=${{ secrets.DOCKERHUB_USERNAME }},imageCredentials.password=${{ secrets.DOCKERHUB_TOKEN }},dopplerToken=${{ secrets.SERVICE_DOPPLER_TOKEN_PRD }}" --set "image.repository=${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.SERVICE_NAME }}" --set "image.tag=${{ ${{ steps.git_extract_branch_sha.outputs.REPO_SHA_SHORT }} }}"   
