--- a/.github/workflows/eks_deploy.yml
+++ b/.github/workflows/eks_deploy.yml
@@ -69,25 +69,27 @@ jobs:
         id: create_subdomain
         if: env.HELM_CONFIG_SERVICE_SUBDOMAIN_ENABLED != ''
         run: |
-          echo "Creating subdomain ${{ env.HELM_CONFIG_SERVICE_SUBDOMAIN }} for service ${{ secrets.SERVICE_NAME }} under Cloudflare "
-          cf_output=$(python cf-utils.py)
-          echo "SUBDOMAIN_URL=$(echo -n $cf_output)" >> $GITHUB_OUTPUT
-      
+          echo "Creating subdomain for service"
           echo "Constructing Ingress settings:"
           INGRESS_SET_STR=""
 
           if ${{ endsWith(github.ref, '/main')  }} ; then
+            echo "Creating subdomain ${{ env.HELM_CONFIG_SERVICE_SUBDOMAIN_PRD }} for service ${{ secrets.SERVICE_NAME }} under Cloudflare "
             INGRESS_SET_STR+=" --set 'ingress.hosts[0].host=${{ env.HELM_CONFIG_SERVICE_SUBDOMAIN_PRD }},ingress.hosts[0].paths[0].path=/,ingress.hosts[0].paths[0].pathType=Prefix'"
           fi
 
           if ${{ endsWith(github.ref, '/develop')  }} ; then
+            echo "Creating subdomain ${{ env.HELM_CONFIG_SERVICE_SUBDOMAIN_DEV }} for service ${{ secrets.SERVICE_NAME }} under Cloudflare "
             INGRESS_SET_STR+=" --set 'ingress.hosts[0].host=${{ env.HELM_CONFIG_SERVICE_SUBDOMAIN_DEV }},ingress.hosts[0].paths[0].path=/,ingress.hosts[0].paths[0].pathType=Prefix'"
           fi
 
           echo "INGRESS_SET_STR value is: ${INGRESS_SET_STR}"
           echo "INGRESS_SET_ADDON=$(echo $INGRESS_SET_STR)" >>$GITHUB_OUTPUT
 
-          echo "Subdomain for service ${{ secrets.SERVICE_NAME }} created."
+          cf_output=$(python cf-utils.py)
+          echo "SUBDOMAIN_URL=$(echo -n $cf_output)" >> $GITHUB_OUTPUT
+
+          echo "Subdomain ${cf_output} for service ${{ secrets.SERVICE_NAME }} created."
         env:
           CF_TOKEN: ${{ secrets.CF_TOKEN }}
           CF_EMAIL: ${{ secrets.CF_EMAIL }}
