--- a/.github/workflows/eks_deploy.yml
+++ b/.github/workflows/eks_deploy.yml
@@ -102,6 +102,7 @@ jobs:
 
       - name: ENV = DEV | Deploy ${{ secrets.SERVICE_NAME }} to kubernetes namespace ${{ secrets.AWS_EKS_NAMESPACE }}
         id: eksdeploy_dev
+        if: endsWith(github.ref, '/develop')
         # if: secrets.AWS_EKS_NAMESPACE != '' &&  secrets.SERVICE_NAME != ''
         uses: koslib/helm-eks-action@v1.26.0
         env:
@@ -111,6 +112,7 @@ jobs:
 
       - name: ENV = PRD | Deploy ${{ secrets.SERVICE_NAME }} to kubernetes namespace ${{ secrets.AWS_EKS_NAMESPACE }}
         id: eksdeploy_prd
+        if: endsWith(github.ref, '/main')
         # if: secrets.AWS_EKS_NAMESPACE != '' &&  secrets.SERVICE_NAME != ''
         uses: koslib/helm-eks-action@v1.26.0
         env:
