--- a/.github/workflows/eks_deploy.yml
+++ b/.github/workflows/eks_deploy.yml
@@ -100,7 +100,7 @@ jobs:
 
       # Deploying into k8s
 
-      - name: ENV = DEV | Deploy ${{ secrets.SERVICE_NAME }} to kubernetes namespace ${{ secrets.HELM_CONFIG_EKS_NAMESPACE }}
+      - name: ENV = DEV | Deploy ${{ secrets.SERVICE_NAME }} to kubernetes namespace ${{ env.HELM_CONFIG_EKS_NAMESPACE }}
         id: eksdeploy_dev
         if: endsWith(github.ref, '/develop')
         # if: secrets.AWS_EKS_NAMESPACE != '' &&  secrets.SERVICE_NAME != ''
@@ -110,7 +110,7 @@ jobs:
         with:
           command: helm upgrade ${{ secrets.SERVICE_NAME }} ./helm --install --wait --atomic --namespace=${{ env.HELM_CONFIG_EKS_NAMESPACE }} --create-namespace --set "autoscaling.maxReplicas=${{ env.HELM_CONFIG_SERVICE_MAX_REPLICA || 1 }},imageCredentials.username=${{ secrets.DOCKERHUB_USERNAME }},imageCredentials.password=${{ secrets.DOCKERHUB_TOKEN }},dopplerToken=${{ secrets.SERVICE_DOPPLER_TOKEN_DEV }}" --set "image.repository=${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.SERVICE_NAME }}" --set "image.tag=${{ steps.git_extract_branch_sha.outputs.REPO_SHA_SHORT }}" ${{steps.create_subdomain.outputs.INGRESS_SET_ADDON}}
 
-      - name: ENV = PRD | Deploy ${{ secrets.SERVICE_NAME }} to kubernetes namespace ${{ secrets.HELM_CONFIG_EKS_NAMESPACE }}
+      - name: ENV = PRD | Deploy ${{ secrets.SERVICE_NAME }} to kubernetes namespace ${{ env.HELM_CONFIG_EKS_NAMESPACE }}
         id: eksdeploy_prd
         if: endsWith(github.ref, '/main')
         # if: secrets.AWS_EKS_NAMESPACE != '' &&  secrets.SERVICE_NAME != ''
