--- a/.github/workflows/eks_deploy.yml
+++ b/.github/workflows/eks_deploy.yml
@@ -8,6 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - uses: dopplerhq/cli-action@v2
 
       # GIT BRANCH = DEV: Service doppler secrets set to env for develop
