--- a/.github/workflows/eks_deploy.yml
+++ b/.github/workflows/eks_deploy.yml
@@ -2,6 +2,10 @@ name: eks_deploy
 
 on:
   workflow_call:
+    secrets:
+      SERVICE_DOPPLER_TOKEN:
+        required: true
+
 
 jobs:
   eks_deploy:
@@ -13,24 +17,15 @@ jobs:
 
       - uses: dopplerhq/cli-action@v2
 
-      # GIT BRANCH = DEV: Service doppler secrets set to env for develop
-      - name: Login in Doppler, set Doppler env from service project
-        if: endsWith(github.ref, '/develop')
-        run: |
-          doppler secrets download --no-file --format=docker | grep ^HELM_CONFIG_ >> $GITHUB_ENV;
-        env:
-          DOPPLER_TOKEN: ${{ secrets.SERVICE_DOPPLER_TOKEN_DEV }}
-
-      # GIT BRANCH = MAIN: Service doppler secrets set to env for main
+      # Service doppler secrets set to env for main
       - name: Login in Doppler, set Doppler env from github action project
-        if: endsWith(github.ref, '/main')
         run: |
           doppler secrets download --no-file --format=docker | grep ^HELM_CONFIG_ >> $GITHUB_ENV;
         env:
-          DOPPLER_TOKEN: ${{ secrets.SERVICE_DOPPLER_TOKEN_PRD }}
+          DOPPLER_TOKEN: ${{ secrets.SERVICE_DOPPLER_TOKEN }}
 
       
-      # We have one AWS account for github ci, and there is no differentiation based on env type dev or prd
+      # We have one AWS account for github ci
       - name: AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -49,7 +44,7 @@ jobs:
       # Get hostname  
       - name: Get hostname
         id: hostname
-        if: env.HELM_CONFIG_SERVICE_SUBDOMAIN_ENABLED != ''
+        if: env.HELM_CONFIG_SERVICE_SUBDOMAIN != ''
         uses: koslib/helm-eks-action@v1.26.0
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
@@ -59,7 +54,7 @@ jobs:
 
       # Install python
       - name: Setup python
-        if: env.HELM_CONFIG_SERVICE_SUBDOMAIN_ENABLED != ''
+        if: env.HELM_CONFIG_SERVICE_SUBDOMAIN != ''
         uses: actions/setup-python@v4
         with:
           python-version: 3.8
@@ -67,27 +62,24 @@ jobs:
         run: |
           pip install requests
 
-      # Create subdomain
-      - name: Create subdomain if service has that settings under Doppler
-        id: create_subdomain
-        if: env.HELM_CONFIG_SERVICE_SUBDOMAIN_ENABLED != ''
+      - name: Helm configurations construction as a --set addon
+        id: helmconfig
         run: |
-          echo "Creating subdomain for service"
-          echo "Constructing Ingress settings:"
+          echo "1. Constructing Ingress --set addon based on HELM config"
           INGRESS_SET_STR=""
 
-          if ${{ endsWith(github.ref, '/main')  }} ; then
-            echo "Creating subdomain ${{ env.HELM_CONFIG_SERVICE_SUBDOMAIN_PRD }} for service ${{ secrets.SERVICE_NAME }} under Cloudflare "
-            INGRESS_SET_STR+=" --set 'ingress.hosts[0].host=${{ env.HELM_CONFIG_SERVICE_SUBDOMAIN_PRD }},ingress.hosts[0].paths[0].path=/,ingress.hosts[0].paths[0].pathType=Prefix'"
-          fi
-
-          if ${{ endsWith(github.ref, '/develop')  }} ; then
-            echo "Creating subdomain ${{ env.HELM_CONFIG_SERVICE_SUBDOMAIN_DEV }} for service ${{ secrets.SERVICE_NAME }} under Cloudflare "
-            INGRESS_SET_STR+=" --set 'ingress.hosts[0].host=${{ env.HELM_CONFIG_SERVICE_SUBDOMAIN_DEV }},ingress.hosts[0].paths[0].path=/,ingress.hosts[0].paths[0].pathType=Prefix'"
-          fi
+          echo "Creating subdomain ${{ env.HELM_CONFIG_SERVICE_SUBDOMAIN }} for service ${{ secrets.SERVICE_NAME }} under Cloudflare "
+          INGRESS_SET_STR+=" --set 'ingress.hosts[0].host=${{ env.HELM_CONFIG_SERVICE_SUBDOMAIN }},ingress.hosts[0].paths[0].path=/,ingress.hosts[0].paths[0].pathType=Prefix'"
 
           echo "INGRESS_SET_STR value is: ${INGRESS_SET_STR}"
           echo "INGRESS_SET_ADDON=$(echo $INGRESS_SET_STR)" >>$GITHUB_OUTPUT
+
+      # Create subdomain
+      - name: Create subdomain if service has that settings under Doppler
+        id: create_subdomain
+        if: env.HELM_CONFIG_SERVICE_SUBDOMAIN != ''
+        run: |
+          echo "Creating subdomain for service"
 
           cf_output=$(python cf-utils.py)
           echo "SUBDOMAIN_URL=$(echo -n $cf_output)" >> $GITHUB_OUTPUT
@@ -97,28 +89,17 @@ jobs:
           CF_TOKEN: ${{ secrets.CF_TOKEN }}
           CF_EMAIL: ${{ secrets.CF_EMAIL }}
           CF_DOMAIN: ${{ secrets.CF_DOMAIN }}
-          SUBDOMAIN: ${{ endsWith(github.ref, '/main') && env.HELM_CONFIG_SERVICE_SUBDOMAIN_PRD || env.HELM_CONFIG_SERVICE_SUBDOMAIN_DEV }}
+          SUBDOMAIN: ${{ env.HELM_CONFIG_SERVICE_SUBDOMAIN }}
           IP: ${{ steps.hostname.outputs.response }}
 
 
       # Deploying into k8s
 
-      - name: ENV = DEV | Deploy ${{ secrets.SERVICE_NAME }} to kubernetes namespace ${{ env.HELM_CONFIG_EKS_NAMESPACE }}
-        id: eksdeploy_dev
-        if: endsWith(github.ref, '/develop')
+      - name: Deploy ${{ secrets.SERVICE_NAME }} to kubernetes namespace ${{ env.HELM_CONFIG_EKS_NAMESPACE }}
+        id: eksdeploy
         # if: secrets.AWS_EKS_NAMESPACE != '' &&  secrets.SERVICE_NAME != ''
         uses: koslib/helm-eks-action@v1.26.0
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
         with:
-          command: helm upgrade ${{ secrets.SERVICE_NAME }} ./helm --install --wait --atomic --namespace=${{ env.HELM_CONFIG_EKS_NAMESPACE }} --create-namespace --set "autoscaling.maxReplicas=${{ env.HELM_CONFIG_SERVICE_MAX_REPLICA || 1 }},imageCredentials.username=${{ secrets.DOCKERHUB_USERNAME }},imageCredentials.password=${{ secrets.DOCKERHUB_TOKEN }},dopplerToken=${{ secrets.SERVICE_DOPPLER_TOKEN_DEV }}" --set "image.repository=${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.SERVICE_NAME }}" --set "image.tag=${{ steps.git_extract_branch_sha.outputs.REPO_SHA_SHORT }}" ${{steps.create_subdomain.outputs.INGRESS_SET_ADDON}}
-
-      - name: ENV = PRD | Deploy ${{ secrets.SERVICE_NAME }} to kubernetes namespace ${{ env.HELM_CONFIG_EKS_NAMESPACE }}
-        id: eksdeploy_prd
-        if: endsWith(github.ref, '/main')
-        # if: secrets.AWS_EKS_NAMESPACE != '' &&  secrets.SERVICE_NAME != ''
-        uses: koslib/helm-eks-action@v1.26.0
-        env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
-        with:
-          command: helm upgrade ${{ secrets.SERVICE_NAME }} ./helm --install --wait --atomic --namespace=${{ env.HELM_CONFIG_EKS_NAMESPACE }} --create-namespace --set "autoscaling.maxReplicas=${{ env.HELM_CONFIG_SERVICE_MAX_REPLICA || 1 }},imageCredentials.username=${{ secrets.DOCKERHUB_USERNAME }},imageCredentials.password=${{ secrets.DOCKERHUB_TOKEN }},dopplerToken=${{ secrets.SERVICE_DOPPLER_TOKEN_PRD }}" --set "image.repository=${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.SERVICE_NAME }}" --set "image.tag=${{ steps.git_extract_branch_sha.outputs.REPO_SHA_SHORT }}"  ${{steps.create_subdomain.outputs.INGRESS_SET_ADDON}}
+          command: helm upgrade ${{ secrets.SERVICE_NAME }} ./helm --install --wait --atomic --namespace=${{ env.HELM_CONFIG_EKS_NAMESPACE }} --create-namespace --set "autoscaling.maxReplicas=${{ env.HELM_CONFIG_SERVICE_MAX_REPLICA || 1 }},imageCredentials.username=${{ secrets.DOCKERHUB_USERNAME }},imageCredentials.password=${{ secrets.DOCKERHUB_TOKEN }},dopplerToken=${{ secrets.SERVICE_DOPPLER_TOKEN }}" --set "image.repository=${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.SERVICE_NAME }}" --set "image.tag=${{ steps.git_extract_branch_sha.outputs.REPO_SHA_SHORT }}"  ${{steps.helmconfig.outputs.INGRESS_SET_ADDON}}
