--- a/.github/workflows/eks_deploy.yml
+++ b/.github/workflows/eks_deploy.yml
@@ -9,12 +9,6 @@ on:
          required: true
       AWS_SECRET_ACCESS_KEY:
          required: true
-      CF_DOMAIN:
-         required: false
-      CF_EMAIL:
-         required: false
-      CF_TOKEN: 
-         required: false
       DOCKERHUB_TOKEN:
          required: true
       DOCKERHUB_USERNAME: 
@@ -60,58 +54,6 @@ jobs:
         run: |
           echo "REPO_SHA_SHORT=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
           echo "Output for sha_short is: ${{ steps.git_extract_branch_sha.outputs.REPO_SHA_SHORT }}"
-        
-      # Get hostname  
-      - name: Get hostname
-        id: hostname
-        if: env.HELM_CONFIG_SERVICE_SUBDOMAIN != ''
-        uses: koslib/helm-eks-action@v1.26.0
-        env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
-        with:
-          command: kubectl get svc ingress-nginx-controller -n ingress-nginx -o json | jq -r '.status.loadBalancer.ingress[0].hostname'
-
-
-      # Install python
-      - name: Setup python
-        if: env.HELM_CONFIG_SERVICE_SUBDOMAIN != ''
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.8
-      - name: Install dependencies
-        run: |
-          pip install requests
-
-      - name: Helm configurations construction as a --set addon
-        id: helmconfig
-        run: |
-          echo "1. Constructing Ingress --set addon based on HELM config"
-          INGRESS_SET_STR=""
-
-          echo "Creating subdomain ${{ env.HELM_CONFIG_SERVICE_SUBDOMAIN }} for service ${{ secrets.SERVICE_NAME }} under Cloudflare "
-          INGRESS_SET_STR+=" --set 'ingress.hosts[0].host=${{ env.HELM_CONFIG_SERVICE_SUBDOMAIN }},ingress.hosts[0].paths[0].path=/,ingress.hosts[0].paths[0].pathType=Prefix'"
-
-          echo "INGRESS_SET_STR value is: ${INGRESS_SET_STR}"
-          echo "INGRESS_SET_ADDON=$(echo $INGRESS_SET_STR)" >>$GITHUB_OUTPUT
-
-      # Create subdomain
-      - name: Create subdomain if service has that settings under Doppler
-        id: create_subdomain
-        if: env.HELM_CONFIG_SERVICE_SUBDOMAIN != ''
-        run: |
-          echo "Creating subdomain for service"
-
-          cf_output=$(python cf-utils.py)
-          echo "SUBDOMAIN_URL=$(echo -n $cf_output)" >> $GITHUB_OUTPUT
-
-          echo "Subdomain ${cf_output} for service ${{ secrets.SERVICE_NAME }} created."
-        env:
-          CF_TOKEN: ${{ secrets.CF_TOKEN }}
-          CF_EMAIL: ${{ secrets.CF_EMAIL }}
-          CF_DOMAIN: ${{ secrets.CF_DOMAIN }}
-          SUBDOMAIN: ${{ env.HELM_CONFIG_SERVICE_SUBDOMAIN }}
-          IP: ${{ steps.hostname.outputs.response }}
-
 
       # Deploying into k8s
 
@@ -122,4 +64,4 @@ jobs:
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
         with:
-          command: helm upgrade ${{ secrets.SERVICE_NAME }} ./helm --install --wait --atomic --namespace=${{ env.HELM_CONFIG_EKS_NAMESPACE }} --create-namespace --set "autoscaling.maxReplicas=${{ env.HELM_CONFIG_SERVICE_MAX_REPLICA || 1 }},imageCredentials.username=${{ secrets.DOCKERHUB_USERNAME }},imageCredentials.password=${{ secrets.DOCKERHUB_TOKEN }},dopplerToken=${{ secrets.SERVICE_DOPPLER_TOKEN }}" --set "image.repository=${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.SERVICE_NAME }}" --set "image.tag=${{ steps.git_extract_branch_sha.outputs.REPO_SHA_SHORT }}"  ${{steps.helmconfig.outputs.INGRESS_SET_ADDON}}
+          command: helm upgrade ${{ secrets.SERVICE_NAME }} ./helm --install --wait --atomic --namespace=${{ env.HELM_CONFIG_EKS_NAMESPACE }} --create-namespace --set "autoscaling.maxReplicas=${{ env.HELM_CONFIG_SERVICE_MAX_REPLICA || 1 }},imageCredentials.username=${{ secrets.DOCKERHUB_USERNAME }},imageCredentials.password=${{ secrets.DOCKERHUB_TOKEN }},dopplerToken=${{ secrets.SERVICE_DOPPLER_TOKEN }}" --set "image.repository=${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.SERVICE_NAME }}" --set "image.tag=${{ steps.git_extract_branch_sha.outputs.REPO_SHA_SHORT }}"
