--- a/.github/workflows/docker_build_push.yml
+++ b/.github/workflows/docker_build_push.yml
@@ -2,6 +2,15 @@ name: docker_build_push
 
 on:
   workflow_call:
+      secrets:
+      DOCKERHUB_USERNAME: 
+         required: true
+      DOCKERHUB_TOKEN:
+         required: true
+      SERVICE_NAME:
+       required: true
+      NPM_TOKEN:
+        required: true
 
 jobs:
   docker_build_push:
