--- a/.github/workflows/eks_deploy.yml
+++ b/.github/workflows/eks_deploy.yml
@@ -31,6 +31,10 @@ jobs:
 
       - uses: dopplerhq/cli-action@v2
 
+      - name: Test secret
+        run: |
+          echo ${{ secrets.SERVICE_DOPPLER_TOKEN }}
+
       # Service doppler secrets set to env for main
       - name: Login in Doppler, set Doppler env from github action project
         run: |
