--- a/.github/workflows/docker_build_push.yml
+++ b/.github/workflows/docker_build_push.yml
@@ -7,9 +7,13 @@ on:
         required: true
       DOCKERHUB_TOKEN:
         required: true
-      SERVICE_NAME:
+      DOCKERHUB_REPO:
         required: true
       NPM_TOKEN:
+        required: false
+    inputs:
+      DOCKER_TARGET_PLATFORM:
+        type: string
         required: true
 
 jobs:
@@ -28,7 +32,7 @@ jobs:
         with:
           # list of Docker images to use as base name for tags
           images: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{  secrets.SERVICE_NAME }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{  secrets.DOCKERHUB_REPO }}
           # generate Docker tags based on the following events/attributes
           tags: |
             type=raw,value=latest
@@ -38,12 +42,12 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
         with:
-          platforms: linux/arm64
+          platforms: ${{ inputs.DOCKER_TARGET_PLATFORM }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
         with:
-          platforms: linux/arm64
+          platforms: ${{ inputs.DOCKER_TARGET_PLATFORM }}
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
@@ -51,24 +55,29 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push
+      - name: Build and push with NPM token
+        if: NPM_TOKEN != ""
         id: docker_build
         uses: docker/build-push-action@v3
         with:
           context: .
-          platforms: linux/arm64
+          platforms: ${{ inputs.DOCKER_TARGET_PLATFORM }}
           push: true
           build-args: |
             NPM_TOKEN=${{ secrets.NPM_TOKEN }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-      # Test meta outputs
-      - name: Test meta outputs
-        id: meta_outputs
-        shell: bash
-        run: |
-          echo ${{ steps.meta.outputs }}
+      - name: Build and push without npm token
+        if: NPM_TOKEN == ""
+        id: docker_build
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          platforms: ${{ inputs.DOCKER_TARGET_PLATFORM }}
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
           
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
